# cel-fmt

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
docs/: app.js  index.html  styles.css
examples/: basics.cel  complex.cel  kubernetes.cel
src/: doc.rs  formatter.rs  lib.rs  main.rs  options.rs  wasm.rs
